create authRoutes.js & authControllers.js

--- a/backend/.env
+++ b/backend/.env
@@ -1,16 +1,23 @@
-SPOTIFY_CLIENT_ID=your_spotify_app_client_id
-SPOTIFY_CLIENT_SECRET=your_spotify_app_client_secret
+SPOTIFY_CLIENT_ID=b9ab949f46f247abac485678114bd2a6
+SPOTIFY_CLIENT_SECRET=7474f7773fc547ccbcfdea294a446a0e
 
 # This is the redirect Spotify will call AFTER user logs in
 # During local development:
 SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/auth/callback
 
+BASE_URL = 'https://api.spotify.com/v1/'
+AUTH_URL = 'https://accounts.spotify.com/authorize?'
+TOKEN_URL = 'https://accounts.spotify.com/api/token'
+
 # --- FRONTEND URL ---
 # After OAuth completes, backend redirects user to:
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://127.0.0.1:5173
 
 # --- SECURITY ---
 SESSION_SECRET=somerandomlongstring
 
 # --- SERVER SETTINGS ---
 PORT=3001
+
+
+
