--- a/backend/.env
+++ b/backend/.env
@@ -5,9 +5,9 @@ SPOTIFY_CLIENT_SECRET=7474f7773fc547ccbcfdea294a446a0e
 # During local development:
 SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/auth/callback
 
-BASE_URL = 'https://api.spotify.com/v1/'
-AUTH_URL = 'https://accounts.spotify.com/authorize?'
-TOKEN_URL = 'https://accounts.spotify.com/api/token'
+BASE_URL=https://api.spotify.com/v1/
+AUTH_URL=https://accounts.spotify.com/authorize?
+TOKEN_URL=https://accounts.spotify.com/api/token
 
 # --- FRONTEND URL ---
 # After OAuth completes, backend redirects user to:
