--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
