update login functions in authController.js

--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ SPOTIFY_CLIENT_SECRET=7474f7773fc547ccbcfdea294a446a0e
 
 # This is the redirect Spotify will call AFTER user logs in
 # During local development:
-SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/auth/callback
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/api/auth/callback
 
 BASE_URL=https://api.spotify.com/v1/
 AUTH_URL=https://accounts.spotify.com/authorize?
