implement callBack function in authController.js

--- a/backend/.env
+++ b/backend/.env
@@ -8,6 +8,7 @@ SPOTIFY_REDIRECT_URI=http://127.0.0.1:3001/api/auth/callback
 BASE_URL=https://api.spotify.com/v1/
 AUTH_URL=https://accounts.spotify.com/authorize?
 TOKEN_URL=https://accounts.spotify.com/api/token
+ME_URL=https://api.spotify.com/v1/me
 
 # --- FRONTEND URL ---
 # After OAuth completes, backend redirects user to:
